[gd_scene load_steps=4 format=3 uid="uid://cyr0sw47xyunp"]

[ext_resource type="Script" path="res://Classes/dialogue_box.gd" id="1_6ikvb"]
[ext_resource type="FontFile" uid="uid://s0k0m458lp0h" path="res://Assets/m5x7.ttf" id="2_8egyw"]
[ext_resource type="Texture2D" uid="uid://c6hurh1ckknqj" path="res://Assets/transparent border.png" id="3_3hi3h"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ikvb")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = -1
offset_left = 6.0
offset_top = 6.0
offset_right = 134.0
offset_bottom = 66.0
theme_override_constants/line_separation = -2
theme_override_fonts/normal_font = ExtResource("2_8egyw")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[color=#fd8d00]Jak[/color]
Using this dumb label instead"
scroll_active = false
shortcut_keys_enabled = false

[node name="Control" type="Control" parent="RichTextLabel"]
show_behind_parent = true
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="RichTextLabel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3hi3h")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LetterTimer" type="Timer" parent="."]

[connection signal="finished" from="RichTextLabel" to="." method="_on_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LetterTimer" to="." method="_newletter"]
